--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "NODE_ENV=production node app.js",
+    "dev": "cross-env NODE_ENV=development nodemon app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cross-env": "^7.0.3",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "dotenv-safe": "^8.2.0",
+    "express": "^4.18.2",
+    "express-winston": "^4.2.0",
+    "helmet": "^6.0.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "^1.9.1",
+    "nodemon": "^2.0.22",
+    "winston": "^3.8.2"
   }
 }
