--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "clone-idealista-backend",
+  "name": "node-express-typescript",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production node app.ts",
-    "dev": "cross-env NODE_ENV=development nodemon app.ts"
+    "build": "tsc",
+    "start": "node build/app.js",
+    "dev": "nodemon src/app.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.17",
