--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,18 @@
     "rootDir": "src",
     "outDir": "build",
     "esModuleInterop": true,
-    "strict": true
-  }
+    "strict": true,
+    "paths": {
+      "@": [
+        "./src"
+      ]
+    }
+  },
+  "include": [
+    "./src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "./build"
+  ]
 }
